--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
 
+      <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
